fixing font readability

--- a/scss/base/_thypography.scss
+++ b/scss/base/_thypography.scss
@@ -21,9 +21,9 @@
 }
 
 
-$min-vw : 300px;
+$min-vw : 400px;
 $max-vw : 1400px;
-$min-font : 12px;
+$min-font : 13px;
 $max-font : 16px;
 $headerScale : 1.4;
 
